2008-09-05  Eric Seidel  <eric@webkit.org>

        Reviewed by Darin Adler.

        Try to make Chromium compile with ToT:
        - Wrap a few places which depend on KJS:: in #if USE(JSC)
        - Include some windows forward declarations

        * dom/Node.h:
        * page/Console.h:
        * page/animation/CompositeAnimation.h:
        * platform/FileSystem.h:
        * platform/graphics/Image.h:
        * platform/text/AtomicString.h:
        * platform/text/String.cpp:
        * rendering/style/RenderStyle.h:

2008-09-05  Dave Hyatt  <hyatt@apple.com>

        Add support for runtime switchability of the Aqua look and the native look on Windows.
        Make RenderThemeWin compile by default even when USE(SAFARI_THEME) is set.

        Reviewed by Adam Roben

        * WebCore.vcproj/WebCore.vcproj:
        * page/Settings.cpp:
        (WebCore::Settings::setShouldPaintNativeControls):
        * page/Settings.h:
        (WebCore::Settings::shouldPaintNativeControls):
        * rendering/RenderThemeSafari.cpp:
        (WebCore::theme):
        * rendering/RenderThemeWin.cpp:

2008-09-05  Antti Koivisto  <antti@apple.com>

        Qt build fix.

        * svg/SVGFEImageElement.cpp:
        (WebCore::SVGFEImageElement::build):

2008-09-05  Dirk Schulze  <vbs85@gmx.de>

        Gtk build fix

        * GNUmakefile.am:

2008-09-05  Antti Koivisto  <antti@apple.com>

        Another build fix.

        * svg/SVGFEImageElement.cpp:
        (WebCore::SVGFEImageElement::notifyFinished):

2008-09-05  Antti Koivisto  <antti@apple.com>

        Build fixes.
        
        * WebCore.xcodeproj/project.pbxproj:
        * svg/graphics/filters/SVGFEImage.cpp:
        (WebCore::FEImage::cachedImage):

2008-09-05  Antti Koivisto  <antti@apple.com>

        Reviewed by Darin Adler.

        Most of the implementation for https://bugs.webkit.org/show_bug.cgi?id=17998